maven web resource directory

--- a/pom.xml
+++ b/pom.xml
@@ -104,4 +104,31 @@
             </properties>
         </profile>
     </profiles>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <webappDirectory>
+                        target/${artifactId}
+                    </webappDirectory>
+                    <warSourceDirectory>
+                        web
+                    </warSourceDirectory>
+                    <webResources>
+                        <resource>
+                            <directory>web\WEB-INF</directory>
+                            <targetPath>WEB-INF</targetPath>
+                            <filtering>true</filtering>
+                            <includes>
+                                <include>web.xml</include>
+                            </includes>
+                        </resource>
+                    </webResources>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
