ftpclient 修改 dir

--- a/pom.xml
+++ b/pom.xml
@@ -81,11 +81,17 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.8.9</version>
         </dependency>
-        <!-- ftpclient -->
+        <!-- edFTPj ftpclient_apache -->
         <dependency>
             <groupId>com.enterprisedt</groupId>
             <artifactId>edtFTPj</artifactId>
             <version>1.5.3</version>
+        </dependency>
+        <!-- jdk io -->
+        <dependency>
+            <groupId>rt</groupId>
+            <artifactId>rt</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
@@ -103,6 +109,7 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+
         <!--spring start
         <dependency>
             <groupId>org.springframework</groupId>
