--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -15,4 +15,17 @@
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
+    <!--spring security login verify-->
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath:/login/spring-*.xml</param-value>
+    </context-param>
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/login</url-pattern><!--配制成 /login 而不是 /* ，因为我这是个测试项目-->
+    </filter-mapping>
 </web-app>
