--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,19 @@
         </dependency>
         <!--login end-->
 
+        <!-- shiro-core -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+        <!-- shiro-web -->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-web</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
         <!-- aspectjrt -->
         <dependency>
             <groupId>org.aspectj</groupId>
