--- a/conf/properties/db-config.properties
+++ b/conf/properties/db-config.properties
@@ -1,4 +1,4 @@
-##connection
+##connection oracle
 connection.driver_class=oracle.jdbc.driver.OracleDriver
 connection.url=jdbc:oracle:thin:@192.168.186.129:1521:ora11g
 connection.username=ifm30
@@ -26,3 +26,9 @@ hibernate.query.substitutions=true 1, false 0
 hibernate.default_batch_fetch_size=16
 hibernate.max_fetch_depth=2
 hibernate.bytecode.use_reflection_optimizer=true
+
+##connection mysql
+mysql.driver_class=com.mysql.jdbc.Driver
+mysql.url=jdbc:mysql://localhost:3306/mysql?useUnicode=true&amp;characterEncoding=UTF-8
+mysql.username=admin
+mysql.password=handsome
