--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -18,7 +18,7 @@
     <!-- spring configuration - contextConfigLocation spring 的组件-->
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath:/spring/spring-security.xml,classpath:/spring/hibernate-spring-config.xml</param-value>
+        <param-value>classpath:/spring/spring-security.xml</param-value>
     </context-param>
     <!--spring security-->
     <filter>
