--- a/pom.xml
+++ b/pom.xml
@@ -3,20 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>cool</groupId>
     <artifactId>CoolPractice</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>CoolPractice</name>
-
     <developers>
         <developer>
             <name>kevin</name>
             <email>rainnight@outlook.com</email>
         </developer>
     </developers>
-
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>3.2.2.RELEASE</spring.version>
@@ -95,7 +92,6 @@
             <version>${spring.version}</version>
         </dependency>
         <!--login end-->
-
         <!-- shiro-core -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
@@ -108,7 +104,6 @@
             <artifactId>shiro-web</artifactId>
             <version>1.3.2</version>
         </dependency>
-
         <!-- aspectjrt -->
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -151,13 +146,20 @@
             <artifactId>jstl</artifactId>
             <version>1.2</version>
         </dependency>
-
         <!-- httpclient -->
         <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
             <version>3.1</version>
         </dependency>
+        <!-- mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>6.0.5</version>
+        </dependency>
+
+
 
 
         <dependency>
