--- a/pom.xml
+++ b/pom.xml
@@ -73,25 +73,25 @@
             <version>${spring.version}</version>
         </dependency>
         <!--login begin-->
-        <!-- spring-security-core -->
+        <!-- spring-security-core
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>${spring.version}</version>
-        </dependency>
-        <!-- spring-security-web -->
+        </dependency>-->
+        <!-- spring-security-web
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
             <version>${spring.version}</version>
-        </dependency>
-        <!-- spring-security-config -->
+        </dependency>-->
+        <!-- spring-security-config
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
             <version>${spring.version}</version>
-        </dependency>
-        <!--login end-->
+        </dependency>-->
+
         <!-- shiro-core -->
         <dependency>
             <groupId>org.apache.shiro</groupId>
@@ -104,6 +104,14 @@
             <artifactId>shiro-web</artifactId>
             <version>1.3.2</version>
         </dependency>
+        <!-- slf4j -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.6.4</version>
+        </dependency>
+
+        <!--login end-->
         <!-- aspectjrt -->
         <dependency>
             <groupId>org.aspectj</groupId>
